--- a/public/style.css
+++ b/public/style.css
@@ -55,6 +55,7 @@ CSS STRUCTURE:
   --white-color:              #fff;
   --black-color:              #272727;
   --sidebar-color:            #eee2ec;
+  --side-hover-color:         #c983cf;
   --gray-color:               #F3F3F3;
   --gray-color-200:           #E3E3E3;
   --gray-color-300:           #E0E0E0;
@@ -1179,6 +1180,11 @@ th{
 }
 
 /*------------ Sidebar ----------------*/
+.blurred{
+  filter: blur(10px);
+  transition: var(--tran-03);
+}
+
 .sidebar{
   position: fixed;
   top: 0;
@@ -1187,6 +1193,38 @@ th{
   width: 250px;
   padding: 10px 14px;
   background-color: var(--sidebar-color);
+  transition: var(--tran-05);
+  backdrop-filter: blur(10px);
+}
+
+.sidebar.close{
+  width: 70px;
+}
+
+.sidebar.close .text{
+  opacity: 0;
+}
+
+.sidebar ul{
+  margin-left: 0;
+  padding: 0;
+}
+
+.sidebar li{
+  height: 50px;
+  margin-top: 20px;
+  list-style: none;
+  display: flex;
+  align-items: center;
+  color: var(--black-color);
+}
+
+.sidebar li .icon{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.5rem;
+  font-weight: 550;
 }
 
 .sidebar section{
@@ -1206,7 +1244,11 @@ th{
 
 .sidebar .text{
   font-size: 1.25rem;
-  font-weight: 600;
+  font-weight: 400;
+  padding-left: 1rem;
+  transition: var(--tran-04);
+  white-space: nowrap;
+  opacity: 1;
 }
 
 .sidebar .image{
@@ -1228,14 +1270,33 @@ section .image-text .header-text{
   transform: translateY(-50%);
   height: 25px;
   width: 25px;
-  background: var(--primary-color);
+  background: var(--side-hover-color);
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 50%;
   font-size: 1rem;
   color: var(--sidebar-color);
+  cursor: pointer;
 }
+
+.sidebar li a{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  border-radius: 0.6rem;
+  transition: var(--tran-04);
+  color: var(--black-color);
+  padding-left: 0.5rem;
+}
+
+.sidebar li a:hover{
+  background: var(--side-hover-color);
+  
+}
+
 
 
 /* 4.2 Billboard
