--- a/public/style.css
+++ b/public/style.css
@@ -932,6 +932,20 @@ th{
   -moz-transition: opacity 0.3s 0s, visibility 0s 0.3s;
   transition: opacity 0.3s 0s, visibility 0s 0.3s;
 }
+
+
+.search-nav{
+  position: relative;
+}
+
+.search-icon {
+  position: absolute;
+  top: 50%;
+  left: 65vh; /* Adjust as needed */
+  transform: translateY(-50%);
+}
+
+
 .search-popup.is-visible {
   opacity: 1;
   visibility: visible;
