--- a/public/style.css
+++ b/public/style.css
@@ -1281,12 +1281,13 @@ th{
 
 
 #main-content{
-  left: 250px;
+  left: 70px;
   position: relative;
   height: 100vh;
-  width: (100% - 250px);
+  width: (100vh - 70px);
   transition: var(--tran-05);
 }
+
 
 .sidebar.close ~ #main-content{
   left: 70px;
